- Added AboutIBC section to the About Page - Fixed the issues with stylesheet meant for only the AboutIBC component applying to other components - Fixed the issue with AboutIBC section's text clipping outside of the component.

--- a/frontend/src/pages/about_page_sections/AboutIBCSection.css
+++ b/frontend/src/pages/about_page_sections/AboutIBCSection.css
@@ -1,17 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 
-* {
+#about-ibc > * {
     margin: 0;
     padding: 0;
     font-family: "DM Sans", sans-serif;
 }
 
-section {
+#about-ibc {
     height: 28.89vw;
     background-color: #f5edea;
+    position: relative;
 }
 
-h2 {
+#about-ibc > h2 {
     color: #324436;
     font-size: 4.7vw;
     font-weight: 700;
@@ -20,7 +21,7 @@ h2 {
     left: 8.27vw;
 }
 
-p {
+#about-ibc > p {
     width: 64vw;
     color: #324436;
     font-size: 1.57vw;
